--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -43,18 +43,6 @@ jobs:
             exit 1
           fi
           echo "::set-output name=git_new_tag::$ct-${{ env.GIT_SHA_SHORT }}"
-      - name: Find and replace version in Chart.yaml
-        uses: jacobtomlinson/gha-find-replace@master
-        with:
-          find: "version:.*"
-          replace: "version: ${{ steps.newtag.outputs.git_new_tag }}"
-          include: Chart.yaml
-      - name: Commit and push changes
-        uses: EndBug/add-and-commit@v7
-        with:
-          add: Chart.yaml
-          message: "[Auto-update] version updated"
-          tag: ${{ steps.newtag.outputs.git_new_tag }}
       - name: Bump version and push tag
         uses: ChloePlanet/github-tag-action@master
         env:
@@ -73,27 +61,6 @@ jobs:
       new_sha: ${{ steps.sha.outputs.sha }}
       new_tag: ${{ steps.newtag.outputs.git_new_tag }}
 
-#  make-local-pr:
-#    needs: [lint]
-#    name: Make/Update local PR
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0
-#      - name: Inject slug/short variables
-#        uses: rlespinasse/github-slug-action@v3.x
-#      - name: Make/Update local PR
-#        uses: repo-sync/pull-request@v2
-#        with:
-#          destination_branch: "main"
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-#          pr_title: "Pulling ${{ env.GITHUB_EVENT_REF_SLUG }} into main"
-#          pr_template: ".github/pull_request_template.md"
-#          pr_reviewer: "wei,worker"
-#          pr_label: "auto-pr"
-
   make-external-pr:
     needs: [lint]
     name: Release chart to the ACR
@@ -107,48 +74,7 @@ jobs:
       - name: Setting branch name variable
         run: |
           echo "BRANCH_NAME=$(echo "${GITHUB_REF##*/}")" >> $GITHUB_ENV
-
-      #      - name: Retrieve slack message success template
-#        run: echo SLACK_MESSAGE_SUCCESS=$(jq -c . .github/success_slack_message.json | sed 's/"/\\"/g') >> $GITHUB_ENV
-#      - name: Retrieve slack message fail template
-#        run: echo SLACK_MESSAGE_FAILURE=$(cat .github/failed_slack_message.json) >> $GITHUB_ENV
-#      - name: Retrieve slack message abort template
-#        run: echo SLACK_MESSAGE_ABORT=$(cat .github/aborted_slack_message.json) >> $GITHUB_ENV
-
-#      - name: Install helm
-#        uses: Azure/setup-helm@v1.1
-#      - name: Login to the ACR using helm
-#        run: |
-#          echo ${{ secrets.ACR_RELEASER_TOKEN }} | helm registry login ${{ env.ACR_NAME }}.azurecr.io --username ${{ env.ACR_USER_NAME }} --password-stdin
-#      - name: Save helm chart to locally
-#        run: |
-#          helm chart save . ${{ env.ACR_NAME }}.azurecr.io/charts/${{ github.event.repository.name }}:${{ needs.lint.outputs.new_tag }}
-#      - name: Publish chart to the ACR
-#        run: |
-#          helm chart push ${{ env.ACR_NAME }}.azurecr.io/charts/${{ github.event.repository.name }}:${{ needs.lint.outputs.new_tag }}
-
-
-#      - name: Replace template variables
-#        if: ${{ success() }}
-#        run: |
-#          bash .github/replace_variables.sh --type=success --chart-name=${{ github.event.repository.name }} \
-#          --chart-version=${{ needs.lint.outputs.new_tag }} --chart-link="https://google.com" --action-link="https://google.com"
-#      - name: Replace template variables
-#        if: ${{ failure() }}
-#        run: |
-#          bash .github/replace_variables.sh --type=failed--chart-name=${{ github.event.repository.name }} \
-#          --chart-version=${{ needs.lint.outputs.new_tag }} --chart-link="https://google.com" --action-link="https://google.com"
-#
-#      - name: Replace template variables
-#        if: ${{ cancelled() }}
-#        run: |
-#          bash .github/replace_variables.sh --type=aborted--chart-name=${{ github.event.repository.name }} \
-#          --chart-version=${{ needs.lint.outputs.new_tag }} --chart-link="https://google.com" --action-link="https://google.com"
-#      - name: TEST message templates
-#        run: cat ./github/success_slack_message.json
-
-
-      - name: TEST Notify slack success
+      - name: Notify slack success
         if: ${{ success() }}
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
@@ -160,25 +86,27 @@ jobs:
           replaceme_2: "https://google.com"
           replaceme_3: "https://google.com"
           replaceme_4: ${{ needs.lint.outputs.new_tag }}
-
-#      - name: Notify slack success
-#        if: ${{ success() }}
-#        env:
-#          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-#        uses: pullreminders/slack-action@master
-#        with:
-#          args: '${{ env.SLACK_MESSAGE_SUCCESS }}'
-#      - name: Notify slack failure
-#        if: ${{ failure() }}
-#        env:
-#          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-#        uses: pullreminders/slack-action@master
-#        with:
-#          args: '${{ env.SLACK_MESSAGE_FAILURE }}'
-#      - name: Notify slack aborted
-#        if: ${{ cancelled() }}
-#        env:
-#          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-#        uses: pullreminders/slack-action@master
-#        with:
-#          args: '${{ env.SLACK_MESSAGE_ABORT }}'
+      - name: Notify slack failed
+        if: ${{ failure() }}
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        uses: iits-consulting/slack-action@master
+        with:
+          channel_id: "C02AJKXC8UT"
+          payload_file: ".github/failed_slack_message.json"
+          replaceme_1: ${{ github.event.repository.name }}
+          replaceme_2: "https://google.com"
+          replaceme_3: "https://google.com"
+          replaceme_4: ${{ needs.lint.outputs.new_tag }}
+      - name: Notify slack aborted
+        if: ${{ cancelled() }}
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        uses: iits-consulting/slack-action@master
+        with:
+          channel_id: "C02AJKXC8UT"
+          payload_file: ".github/aborted_slack_message.json"
+          replaceme_1: ${{ github.event.repository.name }}
+          replaceme_2: "https://google.com"
+          replaceme_3: "https://google.com"
+          replaceme_4: ${{ needs.lint.outputs.new_tag }}
