--- a/.github/workflows/enforce-pr-labels.yml
+++ b/.github/workflows/enforce-pr-labels.yml
@@ -12,24 +12,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-#      - name: Looking for any (major, minor or patch) label
-#        uses: yogevbd/enforce-label-action@2.1.0
-#        with:
-#          REQUIRED_LABELS_ANY: "major,minor,patch"
-#          REQUIRED_LABELS_ANY_DESCRIPTION: "Select at least one label ['major','minor','patch']"
-      - name: Get PR info
-        id: pr_info
-        uses: actions-ecosystem/action-get-merged-pull-request@v1.0.1
+      - name: Looking for any (major, minor or patch) label
+        uses: yogevbd/enforce-label-action@2.1.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-
-      - run: echo ${{ steps.pr_info.outputs.labels }}
-
-      - name: Calculate new version
-        uses: actions-ecosystem/action-bump-semver@v1
-        id: bump_semver
-        with:
-          current_version: "1.0.0-wfsdfsdfsd"
-          level: ${{ steps.pr_info.outputs.labels }}
-
-      - run: echo ${{ steps.bump_semver.outputs.new_version }}
+          REQUIRED_LABELS_ANY: "major,minor,patch"
+          REQUIRED_LABELS_ANY_DESCRIPTION: "Select at least one label ['major','minor','patch']"
