--- a/.github/workflows/merge-to-main.yml
+++ b/.github/workflows/merge-to-main.yml
@@ -20,20 +20,14 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-#      - name: Get PR info
-#        id: pr_info
-#        uses: actions-ecosystem/action-get-merged-pull-request@v1.0.1
-#        with:
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Check PR labels action step
-        id: check_pr_labels
-        uses: shioyang/check-pr-labels-on-push-action@v1.0.3
+      - name: Get PR info
+        id: pr_info
+        uses: actions-ecosystem/action-get-merged-pull-request@v1.0.1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          labels: '["major", "minor", "patch"]'
-      - name: See result
-        run: echo "${{ steps.check_pr_labels.outputs.result }}"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: TEST See result
+        run: print -r "${{ steps.pr_info.outputs.labels }}"
 
 #      - name: Get Previous tag
 #        id: previoustag
