--- a/.github/workflows/merge-to-main.yml
+++ b/.github/workflows/merge-to-main.yml
@@ -50,11 +50,11 @@ jobs:
       - name: Select proper label
         run: |
           if [[ ${{ steps.check_pr_labels_major.outputs.result }} ]]; then
-            echo "CORRECT_LABEL=$(echo "major") >> $GITHUB_ENV
+            echo "CORRECT_LABEL=$(echo "major")" >> $GITHUB_ENV
           elif [[ ${{ steps.check_pr_labels_minor.outputs.result }} ]]; then
-            echo "CORRECT_LABEL=$(echo "minor") >> $GITHUB_ENV
+            echo "CORRECT_LABEL=$(echo "minor")" >> $GITHUB_ENV
           elif [[ ${{ steps.check_pr_labels_patch.outputs.result }} ]]; then
-            echo "CORRECT_LABEL=$(echo "patch") >> $GITHUB_ENV
+            echo "CORRECT_LABEL=$(echo "patch")" >> $GITHUB_ENV
           fi
 
       - name: Get Previous tag
