--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: workadventure
-version: 1.2.0-a2c47ed183
+version: 2.0.0
 appVersion: v1.1.0
 description: A Helm chart for Kubernetes
 type: application
