--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -23,6 +23,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: TEST env
+        run: env
       - name: Set variables and outputs
         id: identify
         run: |
