--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -13,6 +13,7 @@ env:
   HELM_EXPERIMENTAL_OCI: 1
   ACR_NAME: iitsc
   ACR_USER_NAME: iits-releaser
+  SLACK_CHANNEL_ID: "C02AJKXC8UT"
 
 jobs:
   lint:
@@ -82,11 +83,11 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         uses: iits-consulting/slack-action@master
         with:
-          channel_id: "C02AJKXC8UT"
+          channel_id: ${{ env.SLACK_CHANNEL_ID }}
           payload_file: ".github/success_slack_message.json"
           replaceme_1: ${{ github.event.repository.name }}
-          replaceme_2: "https://google.com"
-          replaceme_3: "https://google.com"
+          replaceme_2: "${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}"
+          replaceme_3: "${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}/actions/runs/${{ env.GITHUB_RUN_ID }}"
           replaceme_4: ${{ needs.lint.outputs.new_tag }}
       - name: Notify slack failed
         if: ${{ failure() }}
@@ -94,11 +95,11 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         uses: iits-consulting/slack-action@master
         with:
-          channel_id: "C02AJKXC8UT"
+          channel_id: ${{ env.SLACK_CHANNEL_ID }}
           payload_file: ".github/failed_slack_message.json"
           replaceme_1: ${{ github.event.repository.name }}
-          replaceme_2: "https://google.com"
-          replaceme_3: "https://google.com"
+          replaceme_2: "${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}"
+          replaceme_3: "${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}/actions/runs/${{ env.GITHUB_RUN_ID }}"
           replaceme_4: ${{ needs.lint.outputs.new_tag }}
       - name: Notify slack aborted
         if: ${{ cancelled() }}
@@ -106,9 +107,9 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         uses: iits-consulting/slack-action@master
         with:
-          channel_id: "C02AJKXC8UT"
+          channel_id: ${{ env.SLACK_CHANNEL_ID }}
           payload_file: ".github/aborted_slack_message.json"
           replaceme_1: ${{ github.event.repository.name }}
-          replaceme_2: "https://google.com"
-          replaceme_3: "https://google.com"
+          replaceme_2: "${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}"
+          replaceme_3: "${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}/actions/runs/${{ env.GITHUB_RUN_ID }}"
           replaceme_4: ${{ needs.lint.outputs.new_tag }}
