--- a/.github/workflows/merge-to-main.yml
+++ b/.github/workflows/merge-to-main.yml
@@ -9,7 +9,7 @@ env:
   HELM_EXPERIMENTAL_OCI: 1
   ACR_NAME: iitsc
   ACR_USER_NAME: iits-releaser
-  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+  SLACK_CHANNEL_ID: "C02AJKXC8UT"
 
 jobs:
   release-stable:
@@ -20,11 +20,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-#      - name: Get PR info
-#        id: pr_info
-#        uses: actions-ecosystem/action-get-merged-pull-request@v1.0.1
-#        with:
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check PR labels action step
         id: check_pr_labels_major
@@ -131,11 +126,11 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         uses: iits-consulting/slack-action@master
         with:
-          channel_id: "C02AJKXC8UT"
+          channel_id: ${{ env.SLACK_CHANNEL_ID }}
           payload_file: ".github/success_slack_message.json"
           replaceme_1: ${{ github.event.repository.name }}
-          replaceme_2: "https://google.com"
-          replaceme_3: "https://google.com"
+          replaceme_2: "${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}"
+          replaceme_3: "${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}/actions/runs/${{ env.GITHUB_RUN_ID }}"
           replaceme_4: ${{ needs.release-stable.outputs.new_tag }}
       - name: Notify slack failed
         if: ${{ failure() }}
@@ -143,11 +138,11 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         uses: iits-consulting/slack-action@master
         with:
-          channel_id: "C02AJKXC8UT"
+          channel_id: ${{ env.SLACK_CHANNEL_ID }}
           payload_file: ".github/failed_slack_message.json"
           replaceme_1: ${{ github.event.repository.name }}
-          replaceme_2: "https://google.com"
-          replaceme_3: "https://google.com"
+          replaceme_2: "${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}"
+          replaceme_3: "${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}/actions/runs/${{ env.GITHUB_RUN_ID }}"
           replaceme_4: ${{ needs.release-stable.outputs.new_tag }}
       - name: Notify slack aborted
         if: ${{ cancelled() }}
@@ -155,9 +150,9 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         uses: iits-consulting/slack-action@master
         with:
-          channel_id: "C02AJKXC8UT"
+          channel_id: ${{ env.SLACK_CHANNEL_ID }}
           payload_file: ".github/aborted_slack_message.json"
           replaceme_1: ${{ github.event.repository.name }}
-          replaceme_2: "https://google.com"
-          replaceme_3: "https://google.com"
+          replaceme_2: "${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}"
+          replaceme_3: "${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}/actions/runs/${{ env.GITHUB_RUN_ID }}"
           replaceme_4: ${{ needs.release-stable.outputs.new_tag }}
